# sake_app

./: .replit  Procfile  app.py  create_tables.py  forms.py  main.py  models.py  pyproject.toml  routes.py  sakenowa.py
attached_assets/: Pasted--Rails-create-table-breweries-force-cascade-do-t--1735187877386.txt
models/: __init__.py  brand_flavor_tag.py  brewery.py  flavor_chart.py  flavor_tag.py  ranking.py  region.py  review.py  sake.py  user.py
static/css/: custom.css
static/js/: main.js
templates/: base.html  flavor_tag_ranking.html  index.html  login.html  mypage.html  sake_detail.html  search.html  signup.html
