[tool.poetry]
name = "repl-nix-new-repl"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11, <4"  # ← 修正ポイント
email-validator = "^2.2.0"
flask-migrate = "^4.0.7"
flask = "^3.1.0"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"
werkzeug = "^3.1.0" 
flask-wtf = "^1.2.2"
wtforms = "^3.2.1"
trafilatura = "^2.0.0"
psutil = "^7.0.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
